--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,12 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-@font-face{
-    font-family: 'Android';
-    src: url('../fontes/idroid.otf') format('opentype');
-    font-weight: normal;
-}
-
 :root{
 
     --cor0: #c5ebd6;
@@ -98,13 +92,13 @@ main{
 
 main h1{
     color: var(--cor5);
-    font-family: var(--fonte-android);
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     font-size: 1.8em;
 }
 
 main h2{
-    font-family: var(--fonte-android);
+    font-family: Arial, Helvetica, sans-serif;
     color: var(--cor4);
     font-size: 1.3en;
     font-weight: normal;
